--- a/EntityFramework/SingleDataBase/SingleDataBase.csproj
+++ b/EntityFramework/SingleDataBase/SingleDataBase.csproj
@@ -17,6 +17,7 @@
           <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" />
         <PackageReference Include="Swashbuckle.AspNetCore" />
         <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" />
     </ItemGroup>
